C2C-96: Adding MSPP 'Child Care' report (#34)

--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -166,6 +166,7 @@ ${project.parent.artifactId}.report.antenatalRisks.motherBirthPlan=Mothers with 
 ${project.parent.artifactId}.report.antenatalRisks.prenatalMalariaPositiveChloroquine=Prenatal visit + malaria test positive + Chloroqine co
 ${project.parent.artifactId}.report.antenatalRisks.prenatalMUAC\=<21cm=Prenatal + MUAC =<21cm
 ${project.parent.artifactId}.report.antenatalRisks.womenIron=Women + Fer folate Co prescribed
+
 ${project.parent.artifactId}.report.vaccination.reportName=Vaccination
 ${project.parent.artifactId}.report.vaccination.all.reportName=Vaccination
 ${project.parent.artifactId}.report.vaccination.reportName=MSPP Vaccination
@@ -175,9 +176,30 @@ ${project.parent.artifactId}.report.vaccination.title.label=Vaccination
 ${project.parent.artifactId}.report.vaccination.prenatal.label=Prenatal
 ${project.parent.artifactId}.report.vaccination.ageCategory1.label=0-11 months
 ${project.parent.artifactId}.report.vaccination.ageCategory2.label=12-23 months
-
 ${project.parent.artifactId}.report.vaccination.males.label=M
 ${project.parent.artifactId}.report.vaccination.females.label=F
 
 ${project.parent.artifactId}.report.ecv.reportName=MSPP ECV
 ${project.parent.artifactId}.report.ecv.reportDescription=Fully Vaccinated Child (ECV) report required by the Haitian MSPP
+
+${project.parent.artifactId}.report.childCare.reportName=MSPP Child Care Report
+${project.parent.artifactId}.report.childCare.reportDescription=MSPP Child Care report required by the Haitian MSPP
+${project.parent.artifactId}.report.childCare.total.children.seen=Total children seen
+${project.parent.artifactId}.report.childCare.children.seen.forThe.firstTime=Children seen for the first time
+${project.parent.artifactId}.report.childCare.children.measuredFor.muac=Children seen for the first time with MUAC measured
+${project.parent.artifactId}.report.childCare.children.measuredFor.weight=Children seen for the first time with weighed measured
+${project.parent.artifactId}.report.childCare.children.with.muac.between115And125=Children seen for the first time (115 < MUAC < 125)
+${project.parent.artifactId}.report.childCare.with.muac.lessThan115=Children seen for the first time (MUAC < 115)
+${project.parent.artifactId}.report.childCare.first.visit.children=First visit children
+${project.parent.artifactId}.report.childCare.ageCategory1.label=Children under 6 months
+${project.parent.artifactId}.report.childCare.ageCategory2.label=Children 6 months to 23 months
+${project.parent.artifactId}.report.childCare.ageCategory3.label=Children from 24 months to 59 months
+${project.parent.artifactId}.report.childCare.males.label=M
+${project.parent.artifactId}.report.childCare.females.label=F
+${project.parent.artifactId}.report.childCare.total.label=Total
+${project.parent.artifactId}.report.childCare.dose1.label=Dose 1
+${project.parent.artifactId}.report.childCare.dose2.label=Dose 2
+${project.parent.artifactId}.report.childCare.dose3.label=Dose 3
+${project.parent.artifactId}.report.childCare.characteristics.dataset.name=Characteristics
+${project.parent.artifactId}.report.childCare.fateOfChild.dataset.name=Fate of the child (follow-up for malnutrition)
+${project.parent.artifactId}.report.childCare.vitaminASupplimentation.dataset.name=Vitamin A supplementation and deworming
