--- a/api/src/main/resources/messages_fr.properties
+++ b/api/src/main/resources/messages_fr.properties
@@ -160,6 +160,7 @@ ${project.parent.artifactId}.report.antenatalRisks.motherBirthPlan=Femmes encein
 ${project.parent.artifactId}.report.antenatalRisks.prenatalMalariaPositiveChloroquine=Femmes enceintes avec malaria confirmée traitées à la chloroquine
 ${project.parent.artifactId}.report.antenatalRisks.prenatalMUAC\=<21cm=Femmes enceintes avec un périmètre brachial =<210 mm
 ${project.parent.artifactId}.report.antenatalRisks.womenIron=Autres femmes recevant du fer folate
+
 ${project.parent.artifactId}.report.vaccination.reportName=Vaccination
 ${project.parent.artifactId}.report.vaccination.all.reportName=Vaccination
 ${project.parent.artifactId}.report.vaccination.reportName=MSPP Vaccination
@@ -169,9 +170,30 @@ ${project.parent.artifactId}.report.vaccination.title.label=Vaccination
 ${project.parent.artifactId}.report.vaccination.prenatal.label=Prénatal
 ${project.parent.artifactId}.report.vaccination.ageCategory1.label=0-11 mois
 ${project.parent.artifactId}.report.vaccination.ageCategory2.label=12-23 mois
-
 ${project.parent.artifactId}.report.vaccination.males.label=Hommes
 ${project.parent.artifactId}.report.vaccination.females.label=Femmes
 
 ${project.parent.artifactId}.report.ecv.reportName=MSPP ECV
 ${project.parent.artifactId}.report.ecv.reportDescription=Rapport des Enfants Complètement Vaccinés (ECV) demandé par le MSPP à Haiti
+
+${project.parent.artifactId}.report.childCare.reportName=MSPP Prise en charge de l'enfant
+${project.parent.artifactId}.report.childCare.reportDescription=Rapport de Prise en charge de l'enfant demandé par le MSPP à Haiti
+${project.parent.artifactId}.report.childCare.total.children.seen=Total des enfants vus
+${project.parent.artifactId}.report.childCare.children.seen.forThe.firstTime=Enfants vus pour la première fois
+${project.parent.artifactId}.report.childCare.children.measuredFor.muac=Enfants vus pour la première fois et mesure du PB
+${project.parent.artifactId}.report.childCare.children.measuredFor.weight=Enfants vus pour la première fois et pesés/mesurés
+${project.parent.artifactId}.report.childCare.children.with.muac.between115And125=Enfants vus pour la première fois  (115 < PB < 125)
+${project.parent.artifactId}.report.childCare.with.muac.lessThan115=Enfants vus pour la première fois  (PB < 115)
+${project.parent.artifactId}.report.childCare.first.visit.children=Admission
+${project.parent.artifactId}.report.childCare.ageCategory1.label=Enfants moins de 6 mois
+${project.parent.artifactId}.report.childCare.ageCategory2.label=Enfants de 6 mois à 23 mois
+${project.parent.artifactId}.report.childCare.ageCategory3.label=Enfants de 24 mois à 59 mois
+${project.parent.artifactId}.report.childCare.males.label=M
+${project.parent.artifactId}.report.childCare.females.label=F
+${project.parent.artifactId}.report.childCare.total.label=Total
+${project.parent.artifactId}.report.childCare.dose1.label=Dose 1
+${project.parent.artifactId}.report.childCare.dose2.label=Dose 2
+${project.parent.artifactId}.report.childCare.dose3.label=Dose 3
+${project.parent.artifactId}.report.childCare.characteristics.dataset.name=Caractéristiques
+${project.parent.artifactId}.report.childCare.fateOfChild.dataset.name=Devenir de l'enfant (suivi pour malnutrition)
+${project.parent.artifactId}.report.childCare.vitaminASupplimentation.dataset.name=Supplémentation en vitamine A et Déparasitage
