OZ-18: Adding in Ozone 'Data Extract' reports (#47)

--- a/api/src/main/resources/messages_fr.properties
+++ b/api/src/main/resources/messages_fr.properties
@@ -198,3 +198,55 @@ ${project.parent.artifactId}.report.MSPP.childCare.dose3.label=Dose 3
 ${project.parent.artifactId}.report.MSPP.childCare.characteristics.dataset.name=Caractéristiques
 ${project.parent.artifactId}.report.MSPP.childCare.fateOfChild.dataset.name=Devenir de l'enfant (suivi pour malnutrition)
 ${project.parent.artifactId}.report.MSPP.childCare.vitaminASupplimentation.dataset.name=Supplémentation en vitamine A et Déparasitage
+
+${project.parent.artifactId}.report.encounters.reportName=Encounter Report
+${project.parent.artifactId}.report.encounters.reportDescription=Encounter Report
+${project.parent.artifactId}.report.encounters.datasetName=Encounters SQL Dataset
+${project.parent.artifactId}.report.encounters.datasetDescription=Encounters SQL Dataset
+
+${project.parent.artifactId}.report.orders.reportName=Orders Report
+${project.parent.artifactId}.report.orders.reportDescription=Orders Report
+${project.parent.artifactId}.report.orders.datasetName=Orders SQL Dataset
+${project.parent.artifactId}.report.orders.datasetDescription=Orders SQL Dataset
+
+${project.parent.artifactId}.report.conditions.reportName=Conditions Report
+${project.parent.artifactId}.report.conditions.reportDescription=Conditions Report
+${project.parent.artifactId}.report.conditions.datasetName=Conditions SQL Dataset
+${project.parent.artifactId}.report.conditions.datasetDescription=Conditions SQL Dataset
+
+
+${project.parent.artifactId}.report.diagnoses.reportName=Diagnoses Report
+${project.parent.artifactId}.report.diagnoses.reportDescription=Diagnoses Report
+${project.parent.artifactId}.report.diagnoses.datasetName=Diagnoses SQL Dataset
+${project.parent.artifactId}.report.diagnoses.datasetDescription=Diagnoses SQL Dataset
+
+${project.parent.artifactId}.report.obs.reportName=Observations Report
+${project.parent.artifactId}.report.obs.reportDescription=Observations Report
+${project.parent.artifactId}.report.obs.datasetName=Observations SQL Dataset
+${project.parent.artifactId}.report.obs.datasetDescription=Observations SQL Dataset
+
+${project.parent.artifactId}.report.concepts.reportName=Concepts Report
+${project.parent.artifactId}.report.concepts.reportDescription=Concepts Report
+${project.parent.artifactId}.report.concepts.datasetName=Concepts SQL Dataset
+${project.parent.artifactId}.report.concepts.datasetDescription=Concepts SQL Dataset
+
+${project.parent.artifactId}.report.patients.reportName=Patients Report
+${project.parent.artifactId}.report.patients.reportDescription=Patients Report
+${project.parent.artifactId}.report.patients.datasetName=Patients SQL Dataset
+${project.parent.artifactId}.report.patients.datasetDescription=Patients SQL Dataset
+
+${project.parent.artifactId}.report.visits.table.reportName=Visits Table Report
+${project.parent.artifactId}.report.visits.table.reportDescription=Visits Table Report
+${project.parent.artifactId}.report.visits.table.datasetName=Visits SQL Dataset
+${project.parent.artifactId}.report.visits.table.datasetDescription=Visits SQL Dataset
+
+${project.parent.artifactId}.report.programs.reportName=Programs Report
+${project.parent.artifactId}.report.programs.reportDescription=Programs Report
+${project.parent.artifactId}.report.programs.datasetName=Programs SQL Dataset
+${project.parent.artifactId}.report.programs.datasetDescription=Programs SQL Dataset
+
+${project.parent.artifactId}.report.appointments.reportName=Appointments Report
+${project.parent.artifactId}.report.appointments.reportDescription=Appointments Report
+
+${project.parent.artifactId}.report.appointments.datasetName=Appointments SQL Dataset
+${project.parent.artifactId}.report.appointments.datasetDescription=Appointments SQL Dataset
